Move dire into libdusk

--- a/libdusk/Cargo.toml
+++ b/libdusk/Cargo.toml
@@ -21,7 +21,6 @@ index_vec = { version = "0.1.2" }
 indenter = "0.3.2"
 region = { git = "https://github.com/darfink/region-rs", rev = "5087445f08b3f78c481fb8cde18b47bb67d5eb22" }
 display_adapter = { version = "0.1", path = "../../display_adapter/display_adapter" }
-dusk_dire = { version = "0.1", path = "../dire" }
 dusk-proc-macros = { version = "0.1", path = "../dusk-proc-macros" }
 lazy_static = "1.4.0"
 derivative = "2.2"
@@ -36,7 +35,7 @@ serde_json = { version = "1.0", optional = true }
 
 [features]
 dls = ["dep:lsp-types"]
-dvd = ["dep:interprocess", "dep:serde", "dep:serde_json", "dusk_dire/serde", "index_vec/serde"]
+dvd = ["dep:interprocess", "dep:serde", "dep:serde_json", "index_vec/serde"]
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3.9", features = ["libloaderapi"] }
