Add a new declarative way to add internal types
I think this approach will turn out to be much nicer and easier to
reason about than the old one.

--- a/dusk-proc-macros/Cargo.toml
+++ b/dusk-proc-macros/Cargo.toml
@@ -10,7 +10,8 @@ homepage = "https://dusklang.org/"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-syn = "1.0"
+syn = { version = "1.0", features = ["full"] }
+quote = "1.0"
 
 [lib]
 proc-macro = true
