--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           repository: zachwolfe/display_adapter
-          path: dusk
+          path: display_adapter
       - name: Build
         run: cd dusk && cargo build --verbose
       - name: Run tests
@@ -35,7 +35,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           repository: zachwolfe/display_adapter
-          path: dusk
+          path: display_adapter
       - name: Build
         run: cd dusk && cargo build --verbose
       - name: Run tests
@@ -50,7 +50,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           repository: zachwolfe/display_adapter
-          path: dusk
+          path: display_adapter
       - name: Build
         run: cd dusk && cargo build --verbose
       - name: Run tests
