--- a/libdusk/Cargo.toml
+++ b/libdusk/Cargo.toml
@@ -33,6 +33,9 @@ interprocess = { version = "1.1.1", optional = true }
 serde = { version = "1.0", features = ["derive"], optional = true }
 serde_json = { version = "1.0", optional = true }
 
+[target.'cfg(target_os = "macos")'.dependencies]
+objc = "0.2"
+
 [features]
 dls = ["dep:lsp-types"]
 dvd = ["dep:interprocess", "dep:serde", "dep:serde_json", "index_vec/serde"]
