macho: add initial support for LC_CODE_SIGNATURE
Still doesn't work. :(

--- a/libdusk/Cargo.toml
+++ b/libdusk/Cargo.toml
@@ -24,6 +24,7 @@ dusk-proc-macros = { version = "0.1", path = "../dusk-proc-macros" }
 lazy_static = "1.4.0"
 derivative = "2.2"
 md-5 = "0.10.0"
+rust-crypto = "0.2.36"
 
 # LSP-related dependencies
 lsp-types = { version = "0.93", optional = true }
