Don't hardcode dylib versions

--- a/libdusk/Cargo.toml
+++ b/libdusk/Cargo.toml
@@ -25,6 +25,7 @@ lazy_static = "1.4.0"
 derivative = "2.2"
 md-5 = "0.10.0"
 rust-crypto = "0.2.36"
+yaml-rust = "0.4.5"
 
 # LSP-related dependencies
 lsp-types = { version = "0.93", optional = true }
