--- a/libdusk/Cargo.toml
+++ b/libdusk/Cargo.toml
@@ -25,6 +25,7 @@ derivative = "2.2"
 md-5 = "0.10.0"
 sha2 = "0.10.8"
 yaml-rust = "0.4.5"
+sha1 = "0.10"
 
 # LSP-related dependencies
 lsp-types = { version = "0.95", optional = true }
