--- a/libdusk/Cargo.toml
+++ b/libdusk/Cargo.toml
@@ -26,6 +26,7 @@ md-5 = "0.10.0"
 sha2 = "0.10.8"
 yaml-rust = "0.4.5"
 sha1 = "0.10"
+crc32fast = "1.4"
 
 # LSP-related dependencies
 lsp-types = { version = "0.95", optional = true }
