--- a/libdusk/Cargo.toml
+++ b/libdusk/Cargo.toml
@@ -23,13 +23,18 @@ dusk-proc-macros = { version = "0.1", path = "../dusk-proc-macros" }
 lazy_static = "1.4.0"
 derivative = "2.2"
 md-5 = "0.10.0"
-sha2 = "0.10.8"
 yaml-rust = "0.4.5"
 sha1 = "0.10"
 crc32fast = "1.4"
+rcgen = "0.12"
+rand = "0.8"
+rsa = { version = "0.9", features = ["sha2"] }
 
 # LSP-related dependencies
 lsp-types = { version = "0.95", optional = true }
+
+[profile.dev.package."*"]
+opt-level = 3
 
 [target.'cfg(target_os = "macos")'.dependencies]
 objc = "0.2"
