Implement v1 code signing
...but it doesn't work. The android emulator and `apksigner verify ...` both accept my APK (because of my v2 signature), but if I set the minimum sdk version to something lower (e.g., 22), the latter says that META-INF/APP.RSA does not verify against META-INF/APP.SF. This is likely due to the fact that I don't understand PKCS7 at all and I'm just haphazardly gluing crates together.

--- a/libdusk/Cargo.toml
+++ b/libdusk/Cargo.toml
@@ -30,6 +30,9 @@ rcgen = "0.12"
 rand = "0.8"
 rsa = { version = "0.9", features = ["sha2"] }
 deflate = "1.0"
+base64 = "0.22"
+cryptographic-message-syntax = "0.26"
+x509-certificate = "0.23"
 
 # LSP-related dependencies
 lsp-types = { version = "0.95", optional = true }
